--- a/genres.html
+++ b/genres.html
@@ -2,40 +2,74 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Book Genres</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Book Genres - Book Nest</title>
   <link rel="stylesheet" href="styles.css" />
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: #f9f9f9;
       margin: 0;
       padding: 0;
     }
     nav {
-      background: #8b5cf6;
-      padding: 1rem;
-      color: white;
+      background-color: #6A4FB6;
+      padding: 1rem 2rem;
+      text-align: center;
+    }
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
       display: flex;
-      gap: 1rem;
+      justify-content: center;
+      gap: 2rem;
+      flex-wrap: wrap;
     }
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
+      font-size: 1rem;
+      padding: 0.25rem 0;
+      display: inline-block;
     }
-    nav a:hover {
+    nav a:hover,
+    nav a.active {
       text-decoration: underline;
     }
     h1 {
       text-align: center;
-      margin: 1rem 0;
+      margin: 1rem 0 2rem 0;
+      color: #4A357E;
     }
+
+    /* Optional search bar for genres */
+    .search-container {
+      max-width: 400px;
+      margin: 0 auto 2rem auto;
+      text-align: center;
+    }
+    .search-container input {
+      width: 100%;
+      padding: 10px 15px;
+      border-radius: 25px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+      box-sizing: border-box;
+      transition: border-color 0.3s ease;
+    }
+    .search-container input:focus {
+      outline: none;
+      border-color: #6A4FB6;
+      box-shadow: 0 0 5px #6A4FB6;
+    }
+
     .genre-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 1rem;
-      padding: 1rem 2rem;
+      padding: 0 2rem 2rem 2rem;
       max-width: 1000px;
       margin: auto;
     }
@@ -44,70 +78,118 @@
       border-radius: 8px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
       overflow: hidden;
-      transition: transform 0.2s ease;
+      transition: transform 0.25s ease, box-shadow 0.25s ease;
       cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      user-select: none;
     }
     .genre-card:hover {
-      transform: scale(1.03);
+      transform: scale(1.05);
+      box-shadow: 0 8px 15px rgba(106, 79, 182, 0.4);
     }
     .genre-card img {
       width: 100%;
       height: 160px;
       object-fit: cover;
+      border-top-left-radius: 8px;
+      border-top-right-radius: 8px;
     }
     .genre-name {
       padding: 0.75rem;
       text-align: center;
-      font-weight: bold;
+      font-weight: 700;
       font-size: 1.1rem;
       background: #f0f0f0;
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-bottom-left-radius: 8px;
+      border-bottom-right-radius: 8px;
+    }
+
+    /* Responsive */
+    @media (max-width: 480px) {
+      nav ul {
+        gap: 1rem;
+      }
+      .genre-grid {
+        padding: 0 1rem 1rem 1rem;
+      }
     }
   </style>
 </head>
 <body>
+
   <nav>
-    <a href="index.html">Home</a>
-    <a href="genres.html">Genres</a>
-    <a href="books.html">New Books</a>
-    <a href="login.html">Sign Up / Login</a>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="genres.html" class="active">Genres</a></li>
+      <li><a href="books.html">New Books</a></li>
+      <li><a href="login.html">Sign Up / Login</a></li>
+    </ul>
   </nav>
 
   <h1>Browse by Genre</h1>
 
-  <section class="genre-grid">
+  <!-- Optional search bar to filter genres -->
+  <div class="search-container">
+    <input type="text" id="genreSearch" placeholder="Search genres..." aria-label="Search genres" />
+  </div>
+
+  <section class="genre-grid" id="genreGrid">
     <div class="genre-card">
-      <img src="images/genres/mystery.jpg" alt="Mystery">
+      <img src="images/genres/mystery.jpg" alt="Mystery" />
       <div class="genre-name">Mystery</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/romance.jpg" alt="Romance">
+      <img src="images/genres/romance.jpg" alt="Romance" />
       <div class="genre-name">Romance</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/scifi.jpg" alt="Science Fiction">
+      <img src="images/genres/scifi.jpg" alt="Science Fiction" />
       <div class="genre-name">Sci-Fi</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/fantasy.jpg" alt="Fantasy">
+      <img src="images/genres/fantasy.jpg" alt="Fantasy" />
       <div class="genre-name">Fantasy</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/nonfiction.jpg" alt="Non-fiction">
+      <img src="images/genres/nonfiction.jpg" alt="Non-fiction" />
       <div class="genre-name">Non-Fiction</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/history.jpg" alt="History">
+      <img src="images/genres/history.jpg" alt="History" />
       <div class="genre-name">History</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/thriller.jpg" alt="Thriller">
+      <img src="images/genres/thriller.jpg" alt="Thriller" />
       <div class="genre-name">Thriller</div>
     </div>
     <div class="genre-card">
-      <img src="images/genres/youngadult.jpg" alt="Young Adult">
+      <img src="images/genres/youngadult.jpg" alt="Young Adult" />
       <div class="genre-name">Young Adult</div>
     </div>
   </section>
+
+  <script>
+    // Optional: simple genre search filter
+    const searchInput = document.getElementById('genreSearch');
+    const genreGrid = document.getElementById('genreGrid');
+    searchInput.addEventListener('input', () => {
+      const filter = searchInput.value.toLowerCase();
+      const cards = genreGrid.querySelectorAll('.genre-card');
+      cards.forEach(card => {
+        const genreName = card.querySelector('.genre-name').textContent.toLowerCase();
+        if (genreName.includes(filter)) {
+          card.style.display = '';
+        } else {
+          card.style.display = 'none';
+        }
+      });
+    });
+  </script>
 </body>
 </html>
 
